# blex_crypto_seminar

./: CMakeLists.txt  client_main.cc  crypto_helpers.cc  crypto_helpers.h  pow_client.cc  pow_client.h  pow_server.cc  proof_of_work_game.proto
